
syntax = "proto3";

option go_package = "github.com/MBaczun/producer-consumer/prodcon";

package prodcon;

service Producer_Consumer {
    rpc ConsumeSingleString(String) returns (Ack) {}
    rpc ConsumeStream(stream String) returns (Ack) {}
}

service Client_Producer {
    rpc ProduceStrings(Int) returns (Empty);
}

message String {
    string value = 1;
}

message Ack {
    bool value = 1;
}

message Int {
    int32 value = 1;
}

message Empty {}